# reddit-crawlers

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  celery_app.py  docker-compose.yml  main.py  pyproject.toml  snowflake_tasks.ipynb  streamlit_app.py
celery_tasks/: base_task.py  tasks.py
config/: celery_helper.py  config.py
cookies/: linkedin_cookies.pkl
extractors/: base_extractor.py  linkedin_extractor.py  reddit_extractor.py
formatters/: __init__.py  base.py  http_url.py
models/: data_models.py
scrapers/: __init__.py  selenium_scraper.py
storage/: base_storage.py  minio_storage.py
tests/: test_formatters.py  test_http_url.py  test_minio_storage.py
